change: docker name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     # php-mysqlがあれば、phpイメージからアクセス可になる。
     # phpイメージからmysqlコマンドをたたくなら、phpイメージにmysqlクライアント入れる必要
     db_01:
-        #container_name: "db_01"
+        container_name: "db_01"
         image: mysql:5.7
         environment:
           MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -12,7 +12,7 @@ services:
         #ports:
         #  - "13306:3306"
     nc3app:
-        #container_name: "nc3app"
+        container_name: "nc3app"
         image: netcommons3/nc3app-php${PHP_VERSION}:latest
         #build:
         #    context: .
