--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,5 @@ services:
             - db_01
         volumes:
             - ${PLUGIN_BUILD_DIR}:/opt/plugin
-        #tty: true
-        command: bash -c 'bash /opt/scripts/start-on-docker.sh && bash'
+        tty: true
+        #command: bash -c '/bin/bash'
