test: XDEBUG_MODE: coverage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
             NC3_GIT_BRANCH: ${NC3_GIT_BRANCH}
             PLUGIN_BUILD_DIR: ${PLUGIN_BUILD_DIR}
             PHP_VERSION: ${PHP_VERSION}
+            XDEBUG_MODE: coverage
         depends_on:
             - db_01
         volumes:
