--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -17,9 +17,10 @@ jobs:
     steps:
       - name: php version
         run: |
-          PHP_VERSION=${{ matrix.php }}
-          TAG=${PHP_VERSION#refs/tags/}
+          REP_VERSION=${{ github.ref }}
+          TAG=${REP_VERSION#refs/tags/}
           echo $TAG
+          ls -al
 
       - uses: actions/checkout@v2
 
@@ -40,12 +41,10 @@ jobs:
           context: ./
           file: ./Dockerfile
           build-args: |
-            PHP_VERSION: ${{ matrix.php }}
+            PHP_VERSION=${{ matrix.php }}
           push: true
           tags: "netcommons3/nc3app-php${{ matrix.php }}:latest"
 
       - name: Image digest
         run: |
-          PHP_VERSION=${{ matrix.php }}
-          echo $
           echo ${{ steps.docker_build.outputs.digest }}
