change: MySQLのバージョンを指定できるように修正

--- a/test/local.env
+++ b/test/local.env
@@ -6,6 +6,7 @@ export TARGET_NC3_DIR="/var/www/html/nc3"
 export NC3_DOCKER_DIR="/var/www/html/nc3app-docker2"
 
 export PHP_VERSION=7.4
+export MYSQL_VERSION=8.0
 
 export NC3_BUILD_DIR="/opt/nc3"
 export NC3_GIT_URL="git://github.com/NetCommons3/NetCommons3"
