--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     # phpイメージからmysqlコマンドをたたくなら、phpイメージにmysqlクライアント入れる必要
     db_01:
         #container_name: "db_01"
-        image: mysql:5.7
+        image: mysql:${MYSQL_VERSION}
         environment:
           MYSQL_DATABASE: ${MYSQL_DATABASE}
           MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
