--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     db_01:
         #container_name: "db_01"
         image: mysql:${MYSQL_VERSION}
+        command: --default-authentication-plugin=mysql_native_password
         environment:
           MYSQL_DATABASE: ${MYSQL_DATABASE}
           MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
