--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -17,6 +17,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Slack Notification on Start
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-release
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: "#f0ad4e"
+          SLACK_MESSAGE: "Start Job"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -41,3 +50,25 @@ jobs:
       - name: Image digest
         run: |
           echo ${{ steps.docker_build.outputs.digest }}
+
+      # JOB成功時はこちらのステップが実行される
+      - name: Slack Notification on Finish
+        uses: rtCamp/action-slack-notify@v2.2.0
+        if: success()
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-release
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: good
+          SLACK_MESSAGE: "Job Success"
+
+      # JOB失敗時はこちらのステップが実行される
+      - name: Slack Notification on Failure
+        uses: rtCamp/action-slack-notify@v2.2.0
+        if: failure()
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-tests
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: "Job Failure"
