--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -7,6 +7,19 @@ on:
 name: Build Dockerhub Images
 
 jobs:
+  start:
+    name: start
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Slack Notification on Start
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-release
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: "#f0ad4e"
+          SLACK_MESSAGE: "Start Job"
+
   build:
     name: build_dockerhub_images
     runs-on: ubuntu-18.04
@@ -16,15 +29,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Slack Notification on Start
-        uses: rtCamp/action-slack-notify@v2.2.0
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
-          SLACK_CHANNEL: notify-nc3-release
-          SLACK_TITLE: "${{ github.repository }}"
-          SLACK_COLOR: "#f0ad4e"
-          SLACK_MESSAGE: "Start Job"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -51,16 +55,17 @@ jobs:
         run: |
           echo ${{ steps.docker_build.outputs.digest }}
 
-      # JOB成功時はこちらのステップが実行される
-      - name: Slack Notification on Finish
-        uses: rtCamp/action-slack-notify@v2.2.0
-        if: success()
+      - name: Create Release
+        uses: actions/create-release@v1
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
-          SLACK_CHANNEL: notify-nc3-release
-          SLACK_TITLE: "${{ github.repository }}"
-          SLACK_COLOR: good
-          SLACK_MESSAGE: "Job Success"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: |
+            Docker Image ${{ github.ref }} released.
+          draft: false
+          prerelease: false
 
       # JOB失敗時はこちらのステップが実行される
       - name: Slack Notification on Failure
@@ -68,7 +73,23 @@ jobs:
         if: failure()
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
-          SLACK_CHANNEL: notify-nc3-tests
+          SLACK_CHANNEL: notify-nc3-release
           SLACK_TITLE: "${{ github.repository }}"
           SLACK_COLOR: danger
           SLACK_MESSAGE: "Job Failure"
+
+  finish:
+    name: finish
+    runs-on: ubuntu-18.04
+    needs: tests
+    steps:
+      # JOB成功時はこちらのステップが実行される
+      - name: Slack Notification on Success
+        if: success()
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-release
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: good
+          SLACK_MESSAGE: "Job Success"
