--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -67,6 +67,17 @@ jobs:
           SLACK_COLOR: danger
           SLACK_MESSAGE: "Job Failure"
 
+      # JOBキャンセル時はこちらのステップが実行される
+      - name: Slack Notification on Failure
+        uses: rtCamp/action-slack-notify@v2.2.0
+        if: cancelled()
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
+          SLACK_CHANNEL: notify-nc3-release
+          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_COLOR: #eeeeee
+          SLACK_MESSAGE: "Job Canceled"
+
   finish:
     name: finish
     runs-on: ubuntu-18.04
