--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -74,7 +74,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RELEASE }}
           SLACK_CHANNEL: notify-nc3-release
-          SLACK_TITLE: "${{ github.repository }}"
+          SLACK_TITLE: "${{ github.repository }}(php${{ matrix.php }})"
           SLACK_COLOR: #eeeeee
           SLACK_MESSAGE: "Job Canceled"
 
