--- a/test/local.env
+++ b/test/local.env
@@ -2,10 +2,10 @@
 # Environment variables
 #-----------------------
 
-export TARGET_NC3_DIR="/var/www/html/nc3"
-export NC3_DOCKER_DIR="/var/www/html/nc3app-docker2"
+export TARGET_NC3_DIR="/var/www/NetCommons3/app"
+export NC3_DOCKER_DIR="/var/www/NetCommons3/nc3app-docker"
 
-export PHP_VERSION=7.4
+export PHP_VERSION=7.3
 export MYSQL_VERSION=5.7
 
 export NC3_BUILD_DIR="/opt/nc3"
