--- a/test/local.env
+++ b/test/local.env
@@ -19,4 +19,4 @@ export NC3_TEST_DIR="${NC3_DOCKER_DIR}/test/nc3"
 # Run docker-compose directly
 export PLUGIN_BUILD_DIR="${TARGET_NC3_DIR}/app/Plugin/${PLUGIN_NAME}"
 
-export NC3_TEST_DIR=1
+export NC3_LOCAL_TEST=1
