--- a/test/local.env
+++ b/test/local.env
@@ -5,7 +5,7 @@
 export TARGET_NC3_DIR="/var/www/NetCommons3/app"
 export NC3_DOCKER_DIR="/var/www/NetCommons3/nc3app-docker"
 
-export PHP_VERSION=7.3
+export PHP_VERSION=7.4
 export MYSQL_VERSION=5.7
 
 export NC3_BUILD_DIR="/opt/nc3"
@@ -14,7 +14,7 @@ export NC3_GIT_BRANCH="master"
 export MYSQL_ROOT_PASSWORD=root
 export MYSQL_DATABASE=cakephp_test
 export COMPOSE_INTERACTIVE_NO_CLI=1
-export NC3_TEST_DIR="${NC3_DOCKER_DIR}/test/nc3"
+export NC3_TEST_DIR="${NC3_DOCKER_DIR}/test/nc3-${PHP_VERSION}"
 
 # Run docker-compose directly
 export PLUGIN_BUILD_DIR="${TARGET_NC3_DIR}/app/Plugin/${PLUGIN_NAME}"
