--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -26,7 +26,7 @@ jobs:
     needs: start
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4' ]
+        php: [ '7.1', '7.2', '7.3', '7.4' ]
 
     steps:
       - uses: actions/checkout@v2
