--- a/test/local.env
+++ b/test/local.env
@@ -20,3 +20,6 @@ export NC3_TEST_DIR="${NC3_DOCKER_DIR}/test/nc3-${PHP_VERSION}"
 export PLUGIN_BUILD_DIR="${TARGET_NC3_DIR}/app/Plugin/${PLUGIN_NAME}"
 
 export NC3_LOCAL_TEST=1
+
+# Composer Token
+export COMPOSER_TOKEN=(GitHub Access Token)
