--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
             PHP_VERSION: ${PHP_VERSION}
             COMPOSE_INTERACTIVE_NO_CLI: 1
             XDEBUG_MODE: coverage
+            COMPOSER_TOKEN: ${COMPOSER_TOKEN}
         depends_on:
             - db_01
         volumes:
