--- a/test/local.env
+++ b/test/local.env
@@ -14,6 +14,7 @@ export NC3_GIT_BRANCH="master"
 export MYSQL_ROOT_PASSWORD=root
 export MYSQL_DATABASE=cakephp_test
 export COMPOSE_INTERACTIVE_NO_CLI=1
+export COMPOSE_HTTP_TIMEOUT=120
 export NC3_TEST_DIR="${NC3_DOCKER_DIR}/test/nc3-${PHP_VERSION}"
 
 # Run docker-compose directly
