--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -49,6 +49,7 @@ jobs:
           file: ./Dockerfile
           build-args: |
             COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            COMPOSER_ALLOW_SUPERUSER: 1
             PHP_VERSION=${{ matrix.php }}
           push: true
           tags: "netcommons3/nc3app-php${{ matrix.php }}:latest"
