--- a/test/local.env
+++ b/test/local.env
@@ -2,11 +2,19 @@
 # Environment variables
 #-----------------------
 
-export TARGET_NC3_DIR="/var/www/NetCommons3/app"
-export NC3_DOCKER_DIR="/var/www/NetCommons3/nc3app-docker"
+if [ "${TARGET_NC3_DIR}" = "" ]; then
+  export TARGET_NC3_DIR="/var/www/NetCommons3/app"
+fi
+if [ "${NC3_DOCKER_DIR}" = "" ]; then
+  export NC3_DOCKER_DIR="/var/www/NetCommons3/nc3app-docker"
+fi
 
-export PHP_VERSION=7.4
-export MYSQL_VERSION=5.7
+if [ "${PHP_VERSION}" = "" ]; then
+  export PHP_VERSION=7.4
+fi
+if [ "${MYSQL_VERSION}" = "" ]; then
+  export MYSQL_VERSION=5.7
+fi
 
 export NC3_BUILD_DIR="/opt/nc3"
 export NC3_GIT_URL="git://github.com/NetCommons3/NetCommons3"
@@ -23,4 +31,6 @@ export PLUGIN_BUILD_DIR="${TARGET_NC3_DIR}/app/Plugin/${PLUGIN_NAME}"
 export NC3_LOCAL_TEST=1
 
 # Composer Token
-export COMPOSER_TOKEN=(GitHub Access Token)
+if [ "${COMPOSER_TOKEN}" = "" ]; then
+  export COMPOSER_TOKEN=(GitHub Access Token)
+fi
