--- a/test/local.env
+++ b/test/local.env
@@ -17,7 +17,9 @@ if [ "${MYSQL_VERSION}" = "" ]; then
 fi
 
 export NC3_BUILD_DIR="/opt/nc3"
-export NC3_GIT_URL="git://github.com/NetCommons3/NetCommons3"
+if [ "${NC3_GIT_URL}" = "" ]; then
+  export NC3_GIT_URL="git://github.com/NetCommons3/NetCommons3"
+fi
 export NC3_GIT_BRANCH="master"
 export MYSQL_ROOT_PASSWORD=root
 export MYSQL_DATABASE=cakephp_test
